--- a/Digital Piano/App.xaml
+++ b/Digital Piano/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Digital_Piano.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Digital_Piano"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Digital_Piano">
     <Application.Resources>
          
     </Application.Resources>
