--- a/Digital Piano/MainWindow.xaml
+++ b/Digital Piano/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Digital_Piano"
+        Icon="logo.png"
          
         Title="Digital Piano"
         WindowState="Maximized"
@@ -529,7 +530,7 @@
                                                       Style="{x:Null}" 
                                                       IsEnabled="False" 
                                                       Height="4" 
-                                                      Background="#eae1d2"/>    
+                                                      Background="#eae1d2"/>
                                                 </Track.IncreaseRepeatButton>
                                                 <Track.Thumb>
                                                     <Thumb Style="{StaticResource SliderThumbStyle}" VerticalAlignment="Center" />
